[package]
name = "buttplug-matchbox"
version = "0.1.0"
edition = "2021"

[lib]
name = "buttplug_matchbox"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.73"
buttplug = { version = "7.1.16", default-features = false, features=["serialize-json", "tokio-runtime", "server", "client"] }
futures = "0.3.28"
futures-timer = "3.0.2"
matchbox_socket = "0.7.0"
serde = "1.0.188"
serde_json = "1.0.106"
tokio = { version = "1.29.1", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

[dev-dependencies]
anyhow = "1.0.75"
